--- a/contributions.tex
+++ b/contributions.tex
@@ -1,6 +1,7 @@
 
 
 \section{Contributions}
+\label{sec:contributions}
 
 % Something like 7-9 lines per entry.
 % Style should be the same but the word
