--- a/macros.tex
+++ b/macros.tex
@@ -28,3 +28,5 @@
 \newcommand{\green}[1]{{\color{green} #1}}
 \newcommand{\blue}[1]{{\color{blue} #1}}
 \newcommand{\orange}[1]{{\color{orange} #1}}
+
+\newcommand{\vdmpp}{VDM$^{++}$}
