--- a/main.tex
+++ b/main.tex
@@ -30,9 +30,11 @@ TU Dortmund University, Germany.
 
 \maketitle
 
-\input{motivation}
+\input{abstract}
+\input{introduction}
+\input{trends}
 \input{contributions}
-\input{prospects}
+\input{conclusion}
 
 \bibliography{bib}
 \bibliographystyle{abbrv}
