--- a/bib.bib
+++ b/bib.bib
@@ -1,4 +1,8 @@
 
+=============
+TRACK PAPERS:
+=============
+
 003:
 @inproceedings{isola-2016-selic,
   author    = {Bran Selic},
@@ -210,4 +214,739 @@
   series    = {LNCS},
   note      = {These proceedings},
   year      = {2016}
+}
+
+=============
+OTHER PAPERS:
+=============
+
+
+
+@misc{mathematica,
+  title = {{Mathematica}},
+  howpublished = {\url{https://www.wolfram.com/mathematica}},
+  note = {Accessed: 2016-06-29}
+}
+
+@inproceedings{Elmqvist-Modelica-2009,
+  title={Modelica for Embedded Systems},
+  author={Hilding Elmqvist and Martin Otter and 
+          Dan Henriksson and Bernhard Thiele and Sven Erik Mattsson},
+  booktitle={Proceedings of the 7th Modelica Conference, Como, Italy},
+  year={2009},
+  month={September},
+  pages={354--363}  
+}
+
+@misc{modelica-standard,
+  title = {{Modelica - A Unified Object-Oriented Language for 
+    Systems Modeling. Language Specification Version 3.3}},
+  howpublished = {\url{https://www.modelica.org/documents/ModelicaSpec33.pdf}},
+  note = {Accessed: 2016-06-29}
+}
+
+@misc{ocl,
+  title = {{Documents associated with Object Constraint Language 
+    (OCL), Version 2.4}},
+  howpublished = {\url{http://www.omg.org/spec/OCL/2.4}},
+  note = {Accessed: 2016-06-29}
+}
+
+@phdthesis{doorenbos-rete-95,
+  author = {Robert B. Doorenbos}, 
+  title = {Production Matching for Large Learning Systems}, 
+  school = {Carnegie Mellon University, Pittsburgh, PA},
+  year = {1995}
+}
+
+@article{forgy-rete-82,
+  author = {Charles Forgy},
+  title = {Rete: A Fast Algorithm for the Many Pattern/Many Object Pattern Match Problem},
+  journal = {Artificial Intelligence},
+  volume = 19,
+  pages = {17--37},
+  year = 1982
+}
+
+@inproceedings{havelund-joshi-experience-2014,
+  title={Experience with Rule-Based Analysis of Spacecraft Logs},
+  author={Klaus Havelund and Rajeev Joshi},
+  editor={Cyrille Artho and Csaba Peter {\"O}lveczky},
+  booktitle={Formal Techniques for Safety-Critical Systems: Third 
+     International Workshop (FTSCS 2014), November 2014, Luxembourg},
+  publisher={Springer International Publishing},
+  series={Communications in Computer and Information Science},
+  volume={476},
+  pages={1--16},
+  year={2015},
+  month={April}
+}
+
+@article{barnett2011specification,
+  title={Specification and verification: the {Spec}\# experience},
+  author={Barnett, Mike and F{\"a}hndrich, Manuel and Leino, K Rustan M and M{\"u}ller, Peter and Schulte, Wolfram and Venter, Herman},
+  journal={Communications of the ACM},
+  volume={54},
+  number={6},
+  pages={81--91},
+  year={2011},
+  publisher={ACM}
+}
+
+@misc{smt-lib,
+  author = {{SMT-LIB}},
+  howpublished = "\url{http://smtlib.cs.uiowa.edu}",
+  year = 2015
+}
+
+@incollection{george-raise-2008,
+  year={2008},
+  booktitle={Logics of Specification Languages},
+  series={Monographs in Theoretical Computer Science},
+  editor={Bj{\o}rner, Dines and Henson, MartinC.},
+  title={The Logic of the {RAISE} Specification Language},
+  publisher={Springer Berlin Heidelberg},
+  author={George, Chris and Haxthausen, AnneE.},
+  pages={349-399}
+}
+
+@misc{sysml,
+  title = {{Systems Modeling Language (SysML)}},
+  author = {{OMG}},
+  year = 2012, 
+  month = June,
+  Note = "\url{http://www.omg.org/spec/SysML/1.3/}"
+}
+
+@misc{uml,
+  Author = {{OMG}},
+  Title  = {{UML}},
+  Note   = "\url{http://www.omg.org/spec/UML/2.5/}",
+  year = 2015,
+  month = March
+}
+
+@book{nipkow2002isabelle,
+  title={Isabelle/HOL: a proof assistant for higher-order logic},
+  author={Nipkow, Tobias and Paulson, Lawrence C and Wenzel, Markus},
+  volume={2283},
+  year={2002},
+  publisher={Springer Science \& Business Media}
+}
+
+@misc{isabelle-website,
+  author = {{Isabelle}},
+  howpublished = "\url{https://isabelle.in.tum.de}"
+}
+
+@article{barras1997coq,
+  title={The Coq proof assistant reference manual: Version 6.1},
+  author={Barras, Bruno and Boutin, Samuel and Cornes, Cristina and Courant, Judica{\"e}l and Filliatre, Jean-Christophe and Gimenez, Eduardo and Herbelin, Hugo and Huet, Gerard and Munoz, Cesar and Murthy, Chetan and others},
+  year={1997}
+}
+
+@misc{coq-website,
+  author = {{Coq}},
+  howpublished = "\url{https://coq.inria.fr}"
+}
+
+@misc{pvs-website,
+  author = {{PVS}},
+  howpublished = "\url{http://pvs.csl.sri.com}",
+  year = 2015
+}
+
+@inproceedings{cade92-pvs,
+    AUTHOR = {{S.} Owre and {J.} {M.} Rushby and and {N.} Shankar},
+    TITLE = {{PVS:} {A} Prototype Verification System},
+    BOOKTITLE = {11th International Conference on Automated Deduction (CADE)},
+    YEAR = {1992},
+    EDITOR = {Deepak Kapur},
+    SERIES = {Lecture Notes in Artificial Intelligence},
+    VOLUME = {607},
+    PAGES = {748--752},
+    ADDRESS = {Saratoga, {NY}},
+    MONTH = {jun},
+    PUBLISHER = {Springer-Verlag}
+}
+
+@inproceedings{filliatre-why3-2011,
+  author = {Fran\c{c}ois Bobot and Jean-Christophe Filli\^atre and
+    Claude March\'e and Andrei Paskevich},
+  title = {Why3: Shepherd Your Herd of Provers},
+  booktitle = {Boogie 2011: First International Workshop on Intermediate Verification Languages},
+  year = 2011,
+  address = {Wroc\l{}aw, Poland},
+  month = {August},
+  pages = {53--64}
+}
+
+@inproceedings{leino-lpar-2010,
+  author    = {Rustan Leino},
+  title     = {Dafny: An Automatic Program Verifier},
+  booktitle = {16th International Conference on Logic for Programming, Artificial 
+      Intelligence, and Reasoning, LPAR 2010, 
+      Dakar, Senegal, April 25–May 1},
+  editor    = {Edmund M. Clarke and Andrei Voronkov},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {6355},
+  year      = {2010}
+}
+
+
+@inproceedings{steffen-isola-2014,
+  author    = {Bernhard Steffen},
+  title     = {{LNCS} Transactions on Foundations for Mastering Change: Preliminary Manifesto},
+  booktitle = {6th International Symposium On Leveraging Applications of 
+    Formal Methods, Verification and Validation, ISoLA 2014,
+    Corfu, Greece, October 8-11},
+  editor    = {T. Margaria and B. Steffen},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {8803},
+  year      = {2014}
+}
+
+@book{back-wright-refinement-98,
+ author = {Ralph-Johan Back and Joakim von Wright},
+ title = {Refinement Calculus: A Systematic Introduction},
+ year = {1998},
+ publisher = {Graduate Texts in Computer Science. Springer Verlag}
+}
+
+@article{wirth-refinement-71,
+  author = {Niklaus Wirth},
+  title = {Program development by stepwise refinement},
+  journal = {CACM: Communications of the ACM},
+  year = 1971,
+  volume = 14
+}
+
+@book{woodcock-sanders-z-96,
+ author = {Jim Woodcock and Jim Davies},
+ title = {Using Z. Specification, Refinement, and Proof},
+ year = {1996},
+ publisher = {Prentice-Hall}
+}
+
+@inproceedings{hoare-sanders-refinement-86,
+  author = {J. He and C.A.R. Hoare and J.W. Sanders},
+  title = {Data refinement refined},
+  booktitle = {European Symposium on Programming},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {213},  
+  year      = {1986}
+}
+
+@book{abrial-eventb-10,
+ author = {Jean-Raymond Abrial},
+ title = {Modeling in {Event-B}},
+ year = {2010},
+ publisher = {Cambridge University Press}
+}
+
+@book{morgan-refinement-94,
+ author = {Carroll Morgan},
+ title = {Programming from Specifications},
+ year = {1994},
+ note = {2nd ed.},
+ publisher = {Prentice Hall}
+} 
+
+@book{jackson-alloy-12,
+ author = {Jackson, Daniel},
+ title = {Software Abstractions: Logic, Language, and Analysis},
+ year = {2012},
+ publisher = {The MIT Press},
+} 
+
+@book{booch-uml-99,
+  editor = {Grady Booch and Ivar Jacobson and Jim Rumbaughr},
+  title = {The {Unified Modeling Language} User Guide},
+  year = {1999},
+  publisher = {Addison-Wesley}
+}
+
+@book{standard-ml-97,
+  editor = {Robin Milner and Mads Tofte and Robert Harper},
+  title = {{The Definition of {Standard ML}}},
+  year = {1997},
+  publisher = {MIT Press},
+  note = {ISBN 0-262-63181-4}
+}
+
+@ARTICLE{havelund-jpf-00,
+    AUTHOR = {Klaus Havelund and  Tom Pressburger},
+    TITLE = {Model Checking {Java} Programs Using {Java PathFinder}},
+    JOURNAL = "International Journal on Software Tools for Technology Transfer, STTT",
+    YEAR = 2000,
+    MONTH = "April",
+    VOLUME = 2,
+    Number = 4,
+}
+
+@article{sannella-eml-97,
+  author = {Stefan Kahrs and Donald Sannella and Andrzej Tarlecki},
+  title = {The Definition of {E}xtended {ML}: A Gentle Introduction},
+  journal = {Theoretical Computer Science},
+  volume = 173,
+  pages = {445--484},
+  year = 1997
+}
+
+@phdthesis{havelund-phd-94,
+  author = {Klaus Havelund}, 
+  title = {The {Fork Calculus} - Towards a Logic for {Concurrent ML}}, 
+  school = {{DIKU}, Department of Computer Science, University of Copenhagen, Denmark},
+  year = {1994}
+}
+
+@InCollection{havelund-losl-08,
+  author     = 	 {Klaus Havelund},
+  title      = 	 {{RAISE} in Perspective},
+  booktitle  = 	 {Logics of Specification Languages},
+  pages      =	 {611--614},
+  publisher  =	 {Springer},
+  year       =	 2008,
+  editor     =	 {Dines Bj{\o}rner and Martin Henson}
+}
+
+@book{bjoerner-jones-82,
+  author = {Dines Bj{\o}rner and Cliff B. Jones},
+  title = {Formal Specification and Software Development},
+  year = {1982},
+  publisher = {Prentice Hall International},
+  note = {ISBN 0-13-880733-7}
+}
+
+@article{meyer1988eiffel,
+  title={Eiffel: A language and environment for software engineering},
+  author={Meyer, Bertrand},
+  journal={Journal of Systems and Software},
+  volume={8},
+  number={3},
+  pages={199--246},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@misc{eiffel,
+  author = {{Eiffel}},
+  howpublished = "\url{http://www.eiffel.com}",
+  year = 2015
+}
+
+@inproceedings{leavens1998jml,
+  title={JML: a Java modeling language},
+  author={Leavens, Gary T and Baker, Albert L and Ruby, Clyde},
+  booktitle={Formal Underpinnings of Java Workshop (at OOPSLA’98)},
+  pages={404--420},
+  year={1998},
+  organization={Citeseer}
+}
+
+@misc{jml,
+  author = {{JML}},
+  howpublished = "\url{http://www.eecs.ucf.edu/~leavens/JML}"
+}
+
+@misc{specsharp,
+  author = {{Spec\#}},
+  howpublished = "\url{http://research.microsoft.com/en-us/projects/specsharp}"
+}
+
+@book{jones2003haskell,
+  title={Haskell 98 language and libraries: the revised report},
+  author={Jones, Simon L Peyton},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
+@misc{haskell,
+  author = {{Haskell}},
+  howpublished = "\url{http://www.haskell.org/haskellwiki/Haskell}"
+}
+
+@misc{ocaml,
+  author = {{OCaml}},
+  howpublished = "\url{http://caml.inria.fr/ocaml/index.en.html}",
+  year = 2015
+}
+
+@misc{fortress,
+  author = {Fortress},
+  howpublished  = "\url{https://projectfortress.java.net/}",
+  year = 2015
+}
+
+@misc{python,
+  author = {{Python}},
+  howpublished = "\url{http://www.python.org}",
+  year = 2015
+}
+
+@incollection{de2008z3,
+  title={Z3: An efficient SMT solver},
+  author={De Moura, Leonardo and Bj{\o}rner, Nikolaj},
+  booktitle={Tools and Algorithms for the Construction and Analysis of Systems},
+  pages={337--340},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{havelund-scala-vdm-12,
+  author = {Klaus Havelund},
+  editor = {Margarita Korovina and Andrei Voronkov},
+  title = {Closing the Gap Between Specification and Programming: {VDM$^{++}$} and {Scala}},
+  booktitle = {HOWARD-60: Higher-Order Workshop on Automated Runtime Verification and Debugging},
+  note = {Manchester, UK.},
+  series    = {EasyChair Proceedings},
+  volume    = {1},
+  year      = {2011},
+  month = {December}
+}
+
+@inproceedings{barnett2006boogie,
+  title={Boogie: A modular reusable verifier for object-oriented programs},
+  author={Barnett, Mike and Chang, Bor-Yuh Evan and DeLine, Robert and Jacobs, Bart and Leino, K Rustan M},
+  booktitle={Formal methods for Components and Objects},
+  pages={364--387},
+  year={2006},
+  organization={Springer}
+}
+
+@misc{magicdraw,
+  author = {{MagicDraw}},
+  howpublished = "\url{https://www.magicdraw.com/}",
+  year = 2015
+}
+
+@incollection{lausdahl2009connecting,
+  title={Connecting UML and VDM++ with open tool support},
+  author={Lausdahl, Kenneth and Lintrup, Hans Kristian Agerlund and Larsen, Peter Gorm},
+  booktitle={FM 2009: Formal Methods},
+  pages={563--578},
+  year={2009},
+  publisher={Springer}
+}
+
+@book{booch-uml-99,
+  editor = {Grady Booch and Ivar Jacobson and Jim Rumbaughr},
+  title = {The {Unified Modeling Language} User Guide},
+  year = {1999},
+  publisher = {Addison-Wesley}
+}
+
+@book{standard-ml-97,
+  editor = {Robin Milner and Mads Tofte and Robert Harper},
+  title = {The Definition of Standard {ML}},
+  year = {1997},
+  publisher = {MIT Press},
+  note = {ISBN 0-262-63181-4}
+}
+
+@ARTICLE{havelund-jpf-00,
+    AUTHOR = {Klaus Havelund and  Tom Pressburger},
+    TITLE = {Model Checking {Java} Programs Using {Java PathFinder}},
+    JOURNAL = "International Journal on Software Tools for Technology Transfer, STTT",
+    YEAR = 2000,
+    MONTH = "April",
+    VOLUME = 2,
+    Number = 4,
+}
+
+@article{sannella-eml-97,
+  author = {Stefan Kahrs and Donald Sannella and Andrzej Tarlecki},
+  title = {The Definition of {E}xtended {ML}: A Gentle Introduction},
+  journal = {Theoretical Computer Science},
+  volume = 173,
+  pages = {445--484},
+  year = 1997
+}
+
+@phdthesis{havelund-phd-94,
+  author = {Klaus Havelund}, 
+  title = {The {Fork Calculus} - Towards a Logic for {Concurrent ML}}, 
+  school = {{DIKU}, Department of Computer Science, University of Copenhagen, Denmark},
+  year = {1994}
+}
+
+@InCollection{havelund-losl-08,
+  author     = 	 {Klaus Havelund},
+  title      = 	 {{RAISE} in Perspective},
+  booktitle  = 	 {Logics of Specification Languages},
+  pages      =	 {611--614},
+  publisher  =	 {Springer},
+  year       =	 2008,
+  editor     =	 {Dines Bj{\o}rner and Martin Henson}
+}
+
+@unpublished{pollak,
+  author = {David Pollak},
+  title = {Comment on {Scala} discussion forum.}
+}
+
+@article{middleburg-89,
+  author = {Cornelis Adam Middelburg},
+  title = { {VVSL}: A Language for Structured {VDM} Specifications},
+  year = {1989},
+  journal = {Formal Aspects of Computing},
+  publisher = {Springer London},
+  volume    = {1},
+  number    = {1},
+  pages = {115-135}
+}
+
+@book{jones-shaw-90,
+  editor = {Cliff B. Jones and Roger C. Shaw},
+  title = {Case Studies in Systematic Software Development},
+  year = {1990},
+  publisher = {Prentice Hall International},
+  note = {ISBN 0-13-880733-7}
+}
+
+@book{bjoerner-jones-82,
+  author = {Dines Bj{\o}rner and Cliff B. Jones},
+  title = {Formal Specification and Software Development},
+  year = {1982},
+  publisher = {Prentice Hall International},
+  note = {ISBN 0-13-880733-7}
+}
+
+@book{jones90,
+  author = {Cliff B. Jones},
+  title = {Systematic Software Development using {VDM}},
+  year = {1990},
+  publisher = {Prentice Hall},
+  note = {ISBN 0-13-880733-7}
+}
+
+@misc{fm-wikipedia,
+  author = {{Formal Methods Wikipedia}},
+  howpublished = "\url{http://en.wikipedia.org/wiki/Formal\_methods}"
+}
+
+@proceedings{vdm78,
+  editor    = {Dines Bj{\o}rner and Cliff B. Jones},
+  title     = {The Vienna Development Method: The Meta-Language},
+  booktitle = {The Vienna Development Method: The Meta-  
+                     Language},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {61},
+  year      = {1978}
+}
+
+@misc{vdm,
+  author = {{VDM}},
+  howpublished = "\url{http://en.wikipedia.org/wiki/Vienna\_Development\_Method}"
+}
+
+@misc{eiffel,
+  author = {{Eiffel}},
+  howpublished = "\url{http://www.eiffel.com}"
+}
+
+@misc{jml,
+  author = {{JML}},
+  howpublished = "\url{http://www.eecs.ucf.edu/~leavens/JML}"
+}
+
+@misc{specsharp,
+  author = {{Spec\#}},
+  howpublished = "\url{http://research.microsoft.com/en-us/projects/specsharp}"
+}
+
+@misc{raise,
+  author = {{RAISE project}},
+  howpublished = "\url{http://en.wikipedia.org/wiki/RAISE_specification_language}"
+}
+
+@unpublished{vdmsl,
+  author = {P.G. Larsen, B.S. Hansen, H. Brunn, N. Plat, H. Toetenel, 
+                 D.J. Andrews, J. Dawes, G. Parkin, et al.},
+  title = {Vienna Development Method Ð Specification Language Ð Part 1: Base Language},
+  note = {Information Technology Ð Programming Languages,
+  Their Environments and System Software Interfaces},
+  year = {1996},
+  month = {December}
+}
+
+@book{raise92,
+  author = {Chris George and Peter Haff and Klaus Havelund and Anne Haxthausen and
+                 Robert Milne and Claus Bendix Nielsen and Soeren Prehn and Kim Ritter Wagner},
+  title = {The {RAISE} Specification Language},
+  year = {1992},
+  publisher = {The BCS Practitioner Series, Prentice-Hall},
+  address = {Hemel Hampstead, England},
+}
+
+@misc{scala,
+  author = {{Scala}},
+  howpublished = "\url{http://www.scala-lang.org}"
+}
+
+@misc{haskell,
+  author = {{Haskell}},
+  howpublished = "\url{http://www.haskell.org/haskellwiki/Haskell}"
+}
+
+@misc{ocaml,
+  author = {{OCaml}},
+  howpublished = "\url{http://caml.inria.fr/ocaml/index.en.html}"
+}
+
+@misc{fortress,
+  author = {{Fortress}},
+  howpublished = "\url{http://java.net/projects/projectfortress}"
+}
+
+@misc{python,
+  author = {{Python}},
+  howpublished = "\url{http://www.python.org}"
+}
+
+@inproceedings{odersky-rv10,
+  author = {Martin Odersky},
+  title = {Contracts for {Scala}},
+  booktitle = {Runtime Verification - First Int. Conference, RV'10, 
+    St. Julians, Malta, November 1-4, 2010. Proceedings},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {6418},
+  isbn      = {978-3-642-16611-2},
+  year      = {2010},
+  pages     = {51-57}
+}
+
+
+@article{asml05,
+  author = {Yuri Gurevich and Benjamin Rossman and Wolfram Schulte},
+  title = {Semantic essence of {AsmL}},
+  journal  = {Theoretical Computer Science},
+  volume    = {343},
+  number    = {3},
+  year      = {2005},
+  pages     = {370-412}
+}
+
+@article{havelund-visser02,
+  author    = {Klaus Havelund and
+               Willem Visser},
+  title     = {Program Model Checking as a New Trend},
+  journal   = {STTT},
+  volume    = {4},
+  number    = {1},
+  year      = {2002},
+  pages     = {8-20}
+}
+
+@inproceedings{havelund-k-modelsward-2016,
+  title={{K}: A Wide Spectrum Language for Modeling, Programming 
+  and Analysis},
+  author={Klaus Havelund and Rahul Kumar and
+          Chris Delp and Bradley Clement},
+  booktitle={Proceedings of the 4th International Conference 
+    on Model-Driven Engineering and Software Development (MODELSWARD), Rome, Italy},
+  editors = {Slimane Hammoudi and Luis Ferreira Pires and 
+    Bran Selic and Philippe Desfray}, 
+  publisher={Scitepress digital library},
+  pages={111--122}, 
+  year={2016},
+  month={February}
+}
+
+@book{Spivey-Z-92,
+  author={John Michael Spivey},
+  title={The {Z} Notation - a Reference Manual},
+  publisher={International Series in Computer Science 
+    (2nd ed.). Prentice Hall},
+  year={1992}
+}
+
+@misc{oclinecore,
+  title = {{OCLInEcore}},
+  howpublished = {\url{https://wiki.eclipse.org/OCL/OCLinEcore}},
+  note = {Accessed: 2016-06-28}
+}
+
+@misc{oclinecoreTutorial,
+  title = {{OCLInEcore} Online Tutorial},
+  howpublished = {\url{http://goo.gl/wR2HvP}},
+  note = {Accessed: 2016-06-28}
+}
+
+@book{vdmplusplus05,
+ author = {John Fitzgerald and Peter Gorm Larsen and Paul  Mukherjee and Nico Plat and 
+                 Marcel Verhoef},
+ title = {Validated Designs For Object-oriented Systems},
+ year = {2005},
+ publisher = {Springer-Verlag TELOS},
+ address = {Santa Clara, CA, USA},
+} 
+
+@inproceedings{Havelund2014ComprehensionOS,
+  title={Comprehension of Spacecraft Telemetry Using Hierarchical 
+    Specifications of Behavior},
+  author={Klaus Havelund and Rajeev Joshi},
+  booktitle={16th International Conference on Formal Engineering 
+    Methods (ICFEM), Luxembourg},
+  editors = {Stephan Merz and Jun Pang},
+  publisher = {Springer},
+  series = {LNCS},
+  volume = {8829},  
+  pages={187--202}, 
+  year={2014},
+  month={Nov}
+}
+
+@inproceedings{artho-dslscala-icfem15,
+  title={Domain-Specific Languages with {Scala}},
+  author={Cyrille Artho and Klaus Havelund and Rahul Kumar and Yoriyuki Yamagata},
+  booktitle={17th International Conference on Formal Engineering Methods (ICFEM), Paris},
+  year={2015},
+  month={Nov},
+  publisher = {Springer},
+  series = {LNCS},
+  volume = {9407},  
+  pages={1--16}
+}
+
+@article{havelund-logfire-sttt14,
+  author = {Klaus Havelund},
+  title = {Rule-based runtime verification revisited},
+  journal = {Software Tools for Technology Transfer (STTT)},
+  year = {2015},
+  volume={17},
+  pages={143-170},
+  publisher = {Springer Berlin / Heidelberg}
+}
+
+@INPROCEEDINGS{Barringer2011,
+  author = {Barringer, Howard and Havelund, Klaus},
+  title = {TraceContract: a {Scala DSL} for trace analysis},
+  booktitle = {Proc. of the 17th international conference on Formal methods},
+  year = {2011},
+  pages = {57--72},
+  address = {Berlin, Heidelberg},
+  acmid = {2021306},
+  bdsk-url-1 = {http://dl.acm.org/citation.cfm?id=2021296.2021306},
+  date-modified = {2012-03-02 16:22:45 +0000},
+  isbn = {978-3-642-21436-3},
+  location = {Limerick, Ireland},
+  numpages = {16},
+  url = {http://dl.acm.org/citation.cfm?id=2021296.2021306}
+}
+
+@ARTICLE{Stolz2005,
+  author = {Volker Stolz and Frank Huch},
+  title = {Runtime Verification of Concurrent {Haskell} Programs},
+  journal = {Electr. Notes Theor. Comput. Sci.},
+  year = {2005},
+  volume = {113},
+  pages = {201-216},
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+  ee = {http://dx.doi.org/10.1016/j.entcs.2004.01.026}
 }
