--- a/main.tex
+++ b/main.tex
@@ -30,9 +30,9 @@ TU Dortmund University, Germany.
 
 \maketitle
 
-\input{abstract}
+%\input{abstract}
 \input{introduction}
-\input{trends}
+%\input{trends}
 \input{contributions}
 \input{conclusion}
 
