--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@ TU Dortmund University, Germany.
 \input{introduction}
 %\input{trends}
 \input{contributions}
-\input{conclusion}
+%\input{conclusion}
 
 \bibliography{bib}
 \bibliographystyle{abbrv}
