--- a/introduction.tex
+++ b/introduction.tex
@@ -4,42 +4,46 @@
 
 Since the 60s we have seen tremendous amount of scientific and 
 methodological work in the fields of specification, design and, 
-programming languages. In a simplified view, as an attempt to 
-impose some structure on this work, we can distinguish between 
-three lines of work: formal methods, model-based engineering, and 
-programming languages. Formal methods include, usually textual, 
-formalisms such as VDM, Z, B, RAISE, OBJ, etc. Such formalisms are 
-usually based on mathematical concepts, such as functions, 
-relations, set theory, etc. A specification typically consists of
-signature, a collection of names and their types, and axioms over 
-the signature, constraining the values the names can specifically 
-denote. A specification as such denotes a set of models, each 
-providing a binding of values to the names, satisfying the axioms.
-Such formal methods usually come equipped with proof systems, such 
-that one can prove properties of the specifications, for example 
-consistency of axioms, or that certain theorem are consequences of 
-the axioms. The characteristic of these formalisms is their 
-representation as text, satisfying grammars.
+programming languages. In spite of the very high value of this work, however, this effort has found its limitation by the fact that we do not have a sufficient integration of specification, modeling, and programming languages, as well as tools that support the development engineer in applying methods and techniques from all of these. A tighter integration between specification and verification logics, graphical modeling notations, and programming languages is needed.
 
-Starting later in the 1980ties, what we can call the model-based 
-engineering community, developed graphical formalisms such, most 
+In a (possibly over) simplified view, as an attempt to impose some 
+structure on this work, we can distinguish between three lines of 
+work: formal methods, model-based engineering, and 
+programming languages. Formal methods include, usually textual, 
+formalisms such as VDM, Z, CIP, and RAISE, but also more or less 
+automated theorem proving systems such as Coq, Isabelle/HOL and 
+PVS. Such formalisms are usually based on mathematical 
+concepts, such as functions, relations, set theory, etc. A 
+specification typically 
+consists of signature, a collection of names and their types, and 
+axioms over  the signature, constraining the values that 
+the names can denote. A specification as such denotes a set of 
+models, each providing a binding of values to the names, satisfying 
+the axioms. Such formal methods usually come equipped with proof 
+systems, such that one can prove properties of the specifications, 
+for example consistency of axioms, or that certain theorems are 
+consequences of the axioms. A common characteristic of 
+these formalisms is their representation as text, defined by context-free grammars, and their formalization in semantics and/or logical proof systems.
+
+Starting later in the 1980ties, the model-based 
+engineering community, developed graphical formalisms, most 
 prominently represented by UML and later SysML. These formalisms 
 offer graphical notation for defining data structures as ``nodes 
 and edge'' diagrams, and behavioral diagrams such as state machines 
 and message sequence diagrams. These formalisms specifically 
 address the ease of adoption amongst engineers. It is clear that
 these techniques have become more popular in industry than formal 
-methods, and in part most likely due to the graphical nature of 
+methods, and in part likely due to the graphical nature of 
 these languages. However, these formalisms are complex (the 
 standard defining UML is much larger than the definition of any 
 formal method or programming language), are incomplete (the UML
-standard for example has no expression language although OCL is
+standard for example has no expression-language, although OCL is
 a recommended add-on), and they lack commonly agreed up semantics. 
-To some extent one can argue that they are in need of some form of 
+To some extent one can argue that this community is in need of some form of 
 textual representation in order for the scientific community to 
 provide semantics. We know how to give semantics to text, we do not 
 have much experience (as a community) in giving semantics to 2-
-dimensional graphical languages.
+dimensional languages.
 
 Finally, programming languages have evolved over time, starting 
 with numerical machine code, then assembly languages, and 
@@ -58,27 +62,30 @@ functional programming, as in for example Scala.
 
 Each of the formalisms mentioned above each have advantageous features not owned by other formalisms. However, what is perhaps more important is that these formalisms have many language constructs in common, and to  such an extent that one can ask the controversial question: 
 {\em Should we strive towards a unified view of modeling and 
-programming?} Less controversial questions are: 
-{\em What kind of infusion can be imagined in between formalisms?} 
-(what can each field learn from other fields),
-or: {\em how do we combine models written in different languages?}. 
-For example, can programming languages be extended to support 
-modeling, and can visualization become a standard part of 
-programming languages? Could we imagine one universal specification 
-and programming formalism? Should we accept that models will be 
-written in numerous languages, even within one project, and instead 
-focus on how to integrate models in different languages?
-These are some of the questions that this track addresses. 
-
-In summary, it is the goal of the meeting to discuss the 
+programming?} 
+%Less controversial questions are: 
+%{\em What kind of infusion can be imagined in between formalisms?} 
+%(what can each field learn from other fields),
+%or: {\em how do we combine models written in different 
+%languages?}. For example, can programming languages be extended to 
+%support modeling, and can visualization become a standard part of 
+%programming languages? Could we imagine one universal 
+%specification and programming formalism? Should we accept that 
+%models will be written in numerous languages, even within one 
+%project, and instead focus on how to integrate models in different 
+%languages? These are some of the questions that this track 
+%addresses. 
+It is the goal of the meeting to discuss the 
 relationship between modeling and programming, with the possible 
 objective of achieving an agreement of what a unification of these 
 concepts would mean at an abstract level, and what it would bring 
 as benefits on the practical level. What are the trends in the 
-three domains: programming, formal specification and verification, 
-and model-based engineering, which can be considered to be unifying 
-these domains. We want to discuss whether the time is ripe for 
-another attempt to bring things closer together. The track will be 
-divided into four sessions: meta-modeling, model-based engineering 
-(graphical tools), formal specification languages, and finally 
-programming languages.
+three domains: formal specification and verification,
+model-based engineering, and
+programming, which can be considered 
+to be unifying these domains. We want to discuss whether the time 
+is ripe for another attempt to bring things closer together. The 
+track will be divided into four sessions: meta-modeling (including 
+domain-specific languages), 
+model-based engineering (graphical tools), formal specification 
+languages, and finally programming languages.
