added new papers and made sure titles matched up with final submissions (they did not)

--- a/bib.bib
+++ b/bib.bib
@@ -6,7 +6,7 @@ TRACK PAPERS:
 003:
 @inproceedings{isola-2016-selic,
   author    = {Bran Selic},
-  title     = {Are Modelers Programmers?},
+  title     = {Programming $\subset$ Modeling $\subset$ Engineering},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
@@ -24,7 +24,7 @@ TRACK PAPERS:
                Motika and Alexander Schulz-Rosengarten and 
                Reinhard von Hanxleden},
   title     = {Interactive Model-Based Compilation 
-               Continued Incremental Hardware Synthesis 
+               Continued -- Incremental Hardware Synthesis 
                for {SCCharts}},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
@@ -74,7 +74,7 @@ TRACK PAPERS:
 @inproceedings{isola-2016-berry,
   author    = {Gerard Berry},
   title     = {Formally Unifying Modeling and Design for
-               Embedded Systems - a Personal View},
+               Embedded Systems -- a Personal View},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
@@ -123,9 +123,9 @@ TRACK PAPERS:
 
 095:
 @inproceedings{isola-2016-elaasar,
-  author    = {Maged Elaasar and Omar Baderddin},
-  title     = {Comparing Two Approaches Where Modeling 
-               Meets Programming: {Alf} and {Umple}},
+  author    = {Maged Elaasar and Omar Badreddin},
+  title     = {Modeling Meets Programming: A Comparative 
+               Study in Model Driven Engineering Action Languages},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
@@ -172,7 +172,8 @@ TRACK PAPERS:
 106:
 @inproceedings{isola-2016-seidewitz,
   author    = {Ed Seidewitz},
-  title     = {On a Unified View of Modeling and Programming},
+  title     = {On a Unified View of Modeling and Programming 
+               -- Position Paper},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
@@ -205,6 +206,54 @@ TRACK PAPERS:
   author    = {Hillel Kugler},
   title     = {Unifying Modelling and Programming: 
                A Systems Biology Perspective},
+  booktitle = {7th International Symposium On 
+               Leveraging Applications of Formal Methods, 
+               Verification and Validation, ISoLA 2016,
+    Corfu, Greece, October 10-14},
+  editor    = {T. Margaria and B. Steffen},
+  publisher = {Springer},
+  series    = {LNCS},
+  note      = {These proceedings},
+  year      = {2016}
+}
+
+121:
+@inproceedings{isola-2016-prinz,
+  author    = {Andreas Prinz and Birger M{\o}ller-Pedersen and 
+               Joachim Fischer},
+  title     = {Modelling and Testing of Real Systems},
+  booktitle = {7th International Symposium On 
+               Leveraging Applications of Formal Methods, 
+               Verification and Validation, ISoLA 2016,
+    Corfu, Greece, October 10-14},
+  editor    = {T. Margaria and B. Steffen},
+  publisher = {Springer},
+  series    = {LNCS},
+  note      = {These proceedings},
+  year      = {2016}
+}
+
+122:
+@inproceedings{isola-2016-broy,
+  author    = {Manfred Broy and Klaus Havelund and Rahul Kumar},
+  title     = {Towards a Unified View of Modeling and Programming},
+  booktitle = {7th International Symposium On 
+               Leveraging Applications of Formal Methods, 
+               Verification and Validation, ISoLA 2016,
+    Corfu, Greece, October 10-14},
+  editor    = {T. Margaria and B. Steffen},
+  publisher = {Springer},
+  series    = {LNCS},
+  note      = {These proceedings},
+  year      = {2016}
+}
+
+123:
+@inproceedings{isola-2016-steffen,
+  author    = {Bernhard Steffen and Stfan Naujokat},
+  title     = {Conceptual Unification of
+               Modeling and Programming:
+               A Continuous Improvement Approach},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
