--- a/paper-106.tex
+++ b/paper-106.tex
@@ -5,6 +5,6 @@
 
 Seidewitz
 \cite{isola-2016-seidewitz}
-({\em On a Unified View of Modeling and Programming})
+({\em On a Unified View of Modeling and Programming -- Position Paper})
 presents ...
 
