--- a/paper-3.tex
+++ b/paper-3.tex
@@ -5,5 +5,5 @@
 
 Selic
 \cite{isola-2016-selic}
-({\em Are Modelers Programmers?})
+({\em Programming $\subset$ Modeling $\subset$ Engineering})
 presents ...
