--- a/paper-95.tex
+++ b/paper-95.tex
@@ -3,8 +3,8 @@
 % paper # 95
 % -----------------------------------
 
-Elaasar and Baderddin
+Elaasar and Badreddin
 \cite{isola-2016-elaasar}
-({\em Comparing Two Approaches Where Modeling MeetsProgramming: Alf and Umple})
+({\em Modeling Meets Programming: A Comparative Study inModel Driven Engineering Action Languages})
 present ...
 
