added responsibilities for writing summaries

--- a/paper-107.tex
+++ b/paper-107.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 107
+% paper # 107 Rahul
 % -----------------------------------
 
 Leavens, Naumann, Rajan, and Aotani
