--- a/paper-121.tex
+++ b/paper-121.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 121
+% paper # 121 Bernhard
 % -----------------------------------
 
 Prinz, M{\o}ller-Pedersen, and Joachim Fischer
