--- a/paper-122.tex
+++ b/paper-122.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 122
+% paper # 122 Klaus
 % -----------------------------------
 
 Broy, Havelund, and Kumar
