--- a/paper-123.tex
+++ b/paper-123.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 123
+% paper # 123 Bernhard
 % -----------------------------------
 
 Steffen and Naujokat
