--- a/paper-41.tex
+++ b/paper-41.tex
@@ -1,7 +1,7 @@
 
 
 % -----------------------------------
-% paper # 41
+% paper # 41 Bernhard
 % -----------------------------------
 
 Rybicki, Smyth, Motika,Schulz-Rosengarten, and Hanxleden
