--- a/paper-89.tex
+++ b/paper-89.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 89
+% paper # 89 Klaus
 % -----------------------------------
 
 Haxthausen and Peleska
