--- a/paper-93.tex
+++ b/paper-93.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 93
+% paper # 93 Klaus
 % -----------------------------------
 
 Larsen, Fitzgerald, Woodcock, Nilsson, Gamble, and Foster
