--- a/paper-95.tex
+++ b/paper-95.tex
@@ -1,6 +1,6 @@
 
 % -----------------------------------
-% paper # 95
+% paper # 95 Manfred
 % -----------------------------------
 
 Elaasar and Badreddin
