--- a/paper-122.tex
+++ b/paper-122.tex
@@ -6,4 +6,4 @@
 Broy, Havelund, and Kumar
 \cite{isola-2016-broy}
 ({\em Towards a Unified View of Modeling and Programming})
-present ...
+present an argument for unifying modeling and programming in one formalism.
