--- a/paper-103.tex
+++ b/paper-103.tex
@@ -3,12 +3,7 @@
 % paper # 103 Rahul
 % -----------------------------------
 
-%Template:
-%
-%Bodden, Pun, Steffen, Stolz and Wickert
-%\cite{isola-2016-bodden}
-%({\em Information flow analysis for Go})
-%present ...
+\ \hline \ % to be removed before submission
 
 Lattmann, Kecsk\'{e}s, Meijer,Karsai, V\"{o}lgyesi, and L\'{e}deczi
 \cite{isola-2016-lattmann}
