--- a/paper-104.tex
+++ b/paper-104.tex
@@ -3,6 +3,8 @@
 % paper # 104 Klaus
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Rouquette
 \cite{isola-2016-rouquette}
 ({\em Simplifying OMG MOF-based Metamodeling})
