--- a/paper-107.tex
+++ b/paper-107.tex
@@ -3,6 +3,8 @@
 % paper # 107 Rahul
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Leavens, Naumann, Rajan, and Aotani
 \cite{isola-2016-leavens}
 ({\em Specifying and Verifying Advanced Control Features})
