--- a/paper-110.tex
+++ b/paper-110.tex
@@ -3,7 +3,9 @@
 % paper # 110 Klaus
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Kugler
 \cite{isola-2016-kugler}
 ({\em Unifying Modelling and Programming: A Systems Biology Perspective})
-presents ...
+
