--- a/paper-121.tex
+++ b/paper-121.tex
@@ -3,6 +3,8 @@
 % paper # 121 Bernhard
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Prinz, M{\o}ller-Pedersen, and Joachim Fischer
 \cite{isola-2016-prinz}
 ({\em Modelling and Testing of Real Systems})
