--- a/paper-122.tex
+++ b/paper-122.tex
@@ -3,7 +3,16 @@
 % paper # 122 Klaus
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Broy, Havelund, and Kumar
 \cite{isola-2016-broy}
 ({\em Towards a Unified View of Modeling and Programming})
-present an argument for unifying modeling and programming in one formalism.
+present an argument for unifying modeling and programming in one 
+formalism. They highlight relevant developments in the fields 
+of formal methods, model-based engineering, and programming 
+languages. They subsequently illustrate how modeling can be 
+perceived as programing via examples in the Scala 
+programming language. The paper concludes with a summary of
+issues considered important to reflect on in any attempt to 
+unify modeling and programming.
