--- a/paper-123.tex
+++ b/paper-123.tex
@@ -3,6 +3,8 @@
 % paper # 123 Bernhard
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Steffen and Naujokat
 \cite{isola-2016-steffen}
 ({\em Conceptual Unification of Modeling and Programming:
