--- a/paper-3.tex
+++ b/paper-3.tex
@@ -3,6 +3,8 @@
 % paper # 3 Manfred
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Selic
 \cite{isola-2016-selic}
 ({\em Programming $\subset$ Modeling $\subset$ Engineering})
