--- a/paper-41.tex
+++ b/paper-41.tex
@@ -4,6 +4,8 @@
 % paper # 41 Bernhard
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Rybicki, Smyth, Motika,Schulz-Rosengarten, and Hanxleden
 \cite{isola-2016-rybicki}
 ({\em Interactive Model-Based Compilation ContinuedIncremental Hardware Synthesis for SCCharts})
