--- a/paper-92.tex
+++ b/paper-92.tex
@@ -3,6 +3,8 @@
 % paper # 92 Bernhard
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Berry
 \cite{isola-2016-berry}
 ({\em Formally Unifying Modeling and Design forEmbedded Systems - a Personal View})
