--- a/paper-106.tex
+++ b/paper-106.tex
@@ -3,6 +3,8 @@
 % paper # 106 Manfred
 % -----------------------------------
 
+\ \hline \ % to be removed before submission
+
 Seidewitz
 \cite{isola-2016-seidewitz}
 ({\em On a Unified View of Modeling and Programming -- Position Paper})
