started commenting on papers

--- a/paper-110.tex
+++ b/paper-110.tex
@@ -8,4 +8,15 @@
 Kugler
 \cite{isola-2016-kugler}
 ({\em Unifying Modelling and Programming: A Systems Biology Perspective})
+suggests to explore the topic of unifying modeling and programming
+in the context of computational systems biology, which is a field 
+in its early stages, and therefore potentially more receptive to 
+new ideas. Here, for example cells
+can be effectively described as biological programs.
+Software and system development share several of the main 
+challenges that computational systemsbiology is facing : 
+making models amendable to formal and scalable reasoning,
+using visual languages, combining different programming
+languages, rapid prototyping, and program synthesis.
 
+\done{}
