--- a/paper-122.tex
+++ b/paper-122.tex
@@ -16,3 +16,5 @@ perceived as programing via examples in the Scala
 programming language. The paper concludes with a summary of
 issues considered important to reflect on in any attempt to 
 unify modeling and programming.
+
+\done{}
