added text to paper 104

--- a/paper-104.tex
+++ b/paper-104.tex
@@ -8,6 +8,13 @@
 Rouquette
 \cite{isola-2016-rouquette}
 ({\em Simplifying OMG MOF-based Metamodeling})
-presents ...
+discusses the complexity of UML, the meta-model MOF used to 
+define it, and the XML Metadata Interchange (XMI) standard
+used for serializing UML models. He alternatively suggests
+to define the abstract syntax of a modeling language as 
+a normalized relational schema, and to consider a particular
+model as tabular instance of that schema. 
+He finally suggests leveraging recent advances in functional programming languages, such as Scala, in order 
+to modernize the traditional practice of model-basedprogramming with the Object Constraint Language (OCL) and theQuery/View/Transformation (QVT) standards. 
 
-
+\done{}
