entered Bernhard's texts

--- a/paper-103.tex
+++ b/paper-103.tex
@@ -10,3 +10,4 @@ Lattmann, Kecsk\'{e}s, Meijer,Karsai, V\"{o}lgyesi, and L\'{e}deczi
 ({\em Abstractions for Modeling Complex Systems})
 present ...
 
+\red{Rahul}
