--- a/paper-121.tex
+++ b/paper-121.tex
@@ -8,5 +8,6 @@
 Prinz, M{\o}ller-Pedersen, and Joachim Fischer
 \cite{isola-2016-prinz}
 ({\em Modelling and Testing of Real Systems})
-present ...
+elaborate on OMG-style modeling conventions, in particular by introducing the distinction between description and prescription in order to deal with partially realized systems. Whereas the former is intended for capturing already existing parts of a foreseen system, the latter specifies to be realized parts. This distinction is also used in their testing approach which reminds of hardware in the loop or back-to-back testing, where real and simulated parts are simultaneously used. The power of this approach depends on the executability level of the underlying (modeling) languages, which ranges from mere presentation to dual executability as required for fully exploiting the presented testing approach. In this sense, the corresponding 5-level hierarchy can be regarded as a specific top-level view for merging the modeling and programming landscapes.
 
+\done{}
