--- a/paper-3.tex
+++ b/paper-3.tex
@@ -8,4 +8,6 @@
 Selic
 \cite{isola-2016-selic}
 ({\em Programming $\subset$ Modeling $\subset$ Engineering})
-presents ...
+presents ...
+
+\red{Manfred}
