--- a/paper-123.tex
+++ b/paper-123.tex
@@ -9,5 +9,6 @@ Steffen and Naujokat
 \cite{isola-2016-steffen}
 ({\em Conceptual Unification of Modeling and Programming:
 A Continuous Improvement Approach})
-present ...
+reflect on the distinction between modeling and programming  in terms of `what' and `how' in order to, in particular, emphasize the importance of perspectives: what is a model (a `what') for the one, may well be a program (a `how') for the other. In fact, attempts to pinpoint technical criteria like executability or abstraction for this distinction seem not to survive modern technical developments. Rather, the underlying conceptual cores seem to converge. What remains is the `what'/`how' distinction, i.e. the separation of the true purpose from its realization or the possibility of formulating the primary intent without being forced to over-specification. The paper argues that no one language can adequately support this distinction in general and proposes a meta-level framework for mastering the wealth of required domain-specific languages.
 
+\done{}
