--- a/paper-92.tex
+++ b/paper-92.tex
@@ -8,5 +8,6 @@
 Berry
 \cite{isola-2016-berry}
 ({\em Formally Unifying Modeling and Design forEmbedded Systems - a Personal View})
-presents ...
+shows the direct and formal connection between model-based design and programming in the synchronous languages framework, which is tailored for the embedded system domain. In this setting higher-level models can comfortably be designed, verified, and subsequently transformed to high quality system code. That this actually works as described has been witnessed in the past, and it is the foundation for the Kieler framework, where the design of hardware circuits is targeted. On the one hand, Berry's work impressively demonstrates the synergies between modeling and programming. On the other hand, the author explicitly admits that the success of his overall framework is domain-specific, and cannot easily be generalized.
 
+\done{}
