--- a/paper-3.tex
+++ b/paper-3.tex
@@ -10,4 +10,8 @@ Selic
 ({\em Programming $\subset$ Modeling $\subset$ Engineering})
 presents ...
 
+\kh{Seems to suggest that modeling and programming require
+different formalisms. Message is not super clear, but that's what I get 
+out of it.}
+
 \red{Manfred}
