polished Broy's text

--- a/paper-3.tex
+++ b/paper-3.tex
@@ -8,12 +8,5 @@
 Selic
 \cite{isola-2016-selic}
 ({\em Programming $\subset$ Modeling $\subset$ Engineering})
-presents ...
-
-\kh{Seems to suggest that modeling and programming require
-different formalisms. Message is not super clear, but that's what I get 
-out of it.}
-
-\red{Manfred}
-
-The paper by Bran Selic on the question “Are modelers programmers“ takes the position that models and modeling have a much broader set of purposes than just programming. It points out that there is a direct conflict between modeling and programming. As modeling is based on abstracting away irrelevant details whereas programming requires full implementation oriented details. In the end the paper investigates the question of the complex relationship between modeling and programming. Finally it comes up with the question of whether modelers can become programmers and it concludes that it has to deal with the question whether high level modeling languages can be used as implementation languages. 
+takes the position that models and modeling have a much broader set of purposes than just programming. It points out that there is a direct conflict between modeling and programming, as modeling is based on abstracting away irrelevant details whereas programming requires full implementation oriented details. In the end, the paper investigates the question of the complex relationship between modeling and programming. Finally it comes up with the question of whether modelers can become programmers, and it concludes that it has to deal with the question whether high level modeling languages can be used as implementation languages. 
+\done{}
