--- a/paper-106.tex
+++ b/paper-106.tex
@@ -8,8 +8,7 @@
 Seidewitz
 \cite{isola-2016-seidewitz}
 ({\em On a Unified View of Modeling and Programming -- Position Paper})
-presents ...
+considers a unified view of modeling and programming. 
+Seidewitz takes the position that some software models specify behavior precisely enough that they can be executed, and that all programs can be considered models, at least of the execution they specify. He concludes that modeling and programming are actually not so different after all, and there might be conversions.  He claims that the language design legacy of UML is largely grounded on the old view of sharply separating models and programs, complicating their future convergence, and that it is perhaps time to move forward in the direction of new generations of unified modeling and programming languages.
 
-\red{Manfred}
-
-The paper by Ed Seidewitz considers a unified view of modeling and programming as a position paper. Ed Seidewitz takes the position that some software models specify behavior precisely enough that they can be executed and that all programs can be considered models at least of the execution they specify. It concludes that modeling and programming are actually not so different after all and there might be conversions.  He claims that the language design legacy of UML is largely grounded on the old view of sharply separating models and programs complicating their future convergence and that it is perhaps time to move forward in the direction of new generations of unified modeling and programming languages.
+\done{}
