--- a/paper-95.tex
+++ b/paper-95.tex
@@ -8,8 +8,5 @@
 Elaasar and Badreddin
 \cite{isola-2016-elaasar}
 ({\em Modeling Meets Programming: A Comparative Study inModel Driven Engineering Action Languages})
-present ...
-
-\red{Manfred}
-
-The paper by Maged Elaasar and Omar Baderddin  on “Comparing Two Approaches Where Modeling Meets Programming: Alf and Umple“ is on comparing two approaches where modeling meets programming. The authors consider Alf and Umple. They start from the remark that modeling and programming have often being considered two different domains. They point out that this is true when modeling is primarily meant for human communication, but is not the case when modeling is meant for execution. In their papers they discuss two approaches that specifically address execution. In particular they consider the language Alf that has evolved from the modeling community to make models executable and Umple which has been evolved from the academic community to introduce abstractions of modeling into programming languages. The paper discusses critical differences and ideas for future evolution of model oriented programming languages. 
+compare two approaches, Alf and Umple, where modeling meets programming. They start from the remark that modeling and programming have often been considered two different domains. They point out, that this is true when modeling is primarily meant for human communication, but is not the case when modeling is meant for execution. In their papers they discuss two approaches that specifically address execution. In particular they consider the language Alf, that has evolved from the modeling community to make models executable, and Umple, that has evolved from the academic community to introduce abstractions of modeling into programming languages. The paper discusses critical differences, and ideas for future evolution of model oriented programming languages. 
+\done{}
