reorganized according to session layout

--- a/contributions.tex
+++ b/contributions.tex
@@ -3,24 +3,48 @@
 \section{Contributions}
 \label{sec:contributions}
 
-% Something like 7-9 lines per entry.
-% Style should be the same but the word
-% following title (here ``presents'') can
-% vary, and probably should.
+The paper contributions in this track are introduced below. The papers are ordered according to the sessions of the track: 
+(1) opinions, 
+(2) more concrete,
+(3) meta-level considerations​,
+(4) domain-specific ​approaches​,
+(5) ​tools and frameworks view​, and 
+(6) panel​​.
+%
+Within each track the papers are ordered according to provide
+a natural flow of presentations. 
+
+\subsection{Opinions}
 
 \input{paper-3}
-\input{paper-41}
+\input{paper-106}
 \input{paper-89}
-\input{paper-91}
-\input{paper-92}
-\input{paper-93}
-\input{paper-94}
+
+\subsection{More Concrete}
+
 \input{paper-95}
 \input{paper-103}
-\input{paper-104}
-\input{paper-106}
 \input{paper-107}
-\input{paper-110}
+
+\subsection{Meta-Level Considerations}
+
+\input{paper-104}
 \input{paper-121}
-\input{paper-122}
+\input{paper-110}
+
+\subsection{Domain-Specific ​Approaches}
+
+\input{paper-92}
+\input{paper-41}
+\input{paper-93}
+
+\subsection{Tools and Frameworks View​}
+
+\input{paper-91}
+\input{paper-94}
 \input{paper-123}
+
+\subsection{Panel}
+
+\input{paper-122}
+
