--- a/paper-122.tex
+++ b/paper-122.tex
@@ -5,16 +5,19 @@
 
 \ \hline \ % to be removed before submission
 
+The panel section started with a presentation by
 Broy, Havelund, and Kumar
 \cite{isola-2016-broy}
-({\em Towards a Unified View of Modeling and Programming})
-present an argument for unifying modeling and programming in one 
-formalism. They highlight relevant developments in the fields 
+({\em Towards a Unified View of Modeling and Programming}),
+who present an argument for unifying modeling and programming in 
+one formalism. They highlight relevant developments in the fields 
 of formal methods, model-based engineering, and programming 
 languages. They subsequently illustrate how modeling can be 
 perceived as programing via examples in the Scala 
 programming language. The paper concludes with a summary of
 issues considered important to reflect on in any attempt to 
-unify modeling and programming.
+unify modeling and programming. They specifically highlight
+the need to combine textual and visual languages, the need for
+allowing definition of domain-specific languages, and the need for analysis support.
 
 \done{}
